--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
     <p>This is my first line.</p>
     <h1>This is my first line but biggerrrrr</h1>
+
+    <img src = "https://i.pinimg.com/originals/f0/7d/ff/f07dff6966ac48982773fbb149bfde48.gif"  width = 500px>
+    <p>Airplane!!</p>
+    
 </body>
 </html>
 
