--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>This is my first line but biggerrrrr</h1>
 
     <img src = "https://i.pinimg.com/originals/f0/7d/ff/f07dff6966ac48982773fbb149bfde48.gif"  width = 500px>
-    <p>Airplane!!</p>
+    <p class="red" >Airplane!!</p>
     
 </body>
 </html>
