--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <h3 class = "hover"> Spookyyyy </h3>
 
+
+    <p>What else should i do? I want to make something cool</p>
     
 </body>
 </html>
