--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 
     <p>What else should i do? I want to make something cool</p>
+    <p class = "new" >Lets make a hyper link to a new page</p>
     
 </body>
 </html>
