--- a/more.html
+++ b/more.html
@@ -1,3 +1,21 @@
-<link rel="stylesheet" href="styling.css">
-<link rel="stylesheet" href="more.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Other Page</title>
 
+    <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="more.css">
+    <link rel="stylesheet" href="styling.css">
+</head>
+
+<body>
+
+  <h1>You made it!</h1>
+  <h2>Welcome</h2>
+  <h3>Want to go back? click home below</h3>
+  <a href = "index.html"> Home </a>
+  
+</body>
+<html>
