--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <p>What else should i do? I want to make something cool</p>
     <p class = "new" >Lets make a hyper link to a new page</p>
-    
+    <a href ="more.html"> More</a>
 </body>
 </html>
 
