--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <p>What else should i do? I want to make something cool</p>
     <p class = "new" >Lets make a hyper link to a new page</p>
     <a href ="more.html"> More</a>
+
+    <p>Did you like it? was my page cool or wack?</p>
+    
 </body>
 </html>
 
